--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -89,6 +89,29 @@ body {
     width: 100px;
 }
 
+.blog-image {
+    padding: 200px 0px 120px;
+    text-align: center;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.blog-content {
+    padding: 50px 100px;
+    box-shadow: 0px 0px 10px #595959;
+}
+
+@media (max-width: 991px) {
+    .blog-content{
+        padding: 40px 30px;
+    }
+}
+
+@media (max-width: 768px) {
+    .blog-content{
+        padding: 20px 50px;
+    }
+}
 
 /* Section Footer */
 
