--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -101,6 +101,11 @@ body {
     box-shadow: 0px 0px 10px #595959;
 }
 
+.owl-carousel .card-body {
+    height: 150px;
+    overflow: hidden;
+}
+
 @media (max-width: 991px) {
     .blog-content{
         padding: 40px 30px;
@@ -151,6 +156,18 @@ body {
     padding: 25px;
     transition: 0.5s;
 }
+
+/* @media (max-width: 480px){
+    .navbar-brand {   ใช้ในโทรศัทพ์จอเล็กกว่า5นิ้ว  จอ480px จอใหญ่เเสดงปกติ
+        font-size: 0.8rem;
+        line-height: 2rem;
+    }
+}  
+
+.navbar-brand {      ใช้ในโทรศัทพ์จอเล็กกว่า5นิ้ว
+    font-size: 0.8rem;
+    line-height: 2rem;
+} */
 
 /* Section Page-title */
 .page-title{
@@ -297,7 +314,24 @@ li.inverted > .timeline-card{
     overflow: hidden;
 }
 
+/* Section on to top*/
+.to-top{
+    position: fixed;
+    bottom: 0px;
+    background: #f79be7;
+    color: #fff;
+    z-index: 9999;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    font-size: 25px;
+    right: 2%;
+    cursor: pointer;
+    text-align: center;
+}
 
-
+.to-top:hover{
+    color: #000;
+}
 
 
